--- a/003.JS학습/JS5-5.생성자함수.html
+++ b/003.JS학습/JS5-5.생성자함수.html
@@ -92,7 +92,7 @@
       //   데이터 형은 fuction, 함수임
       console.log("생성자함수의 데이터형:", typeof MovieInfo);
       // 영화정보 배열변수
-      const mi = [];
+
 
       // 보다 현실적인 데이터는 DB로부터 넘겨받은 배열데이터 배열을 받게된다.
       const dbData = [
@@ -124,13 +124,17 @@
           "현빈은 북한공작원 전문배우입니다",
         ],
       ];
-
+     
       //   DB 배열데이터 찍기
+      //   const mi = [];
       //   dbData.forEach((v) => console.log(v.join(",")));
       // 1. 생성자함수로 객체만들기
-      dbData.forEach((v, i) => {
-        mi[i] = new MovieInfo(v);
-      });
+    //   dbData.forEach((v, i) => {
+    //     mi[i] = new MovieInfo(v);
+    //   });
+
+    // -> 위의 foreach를 사용하는 것보다 더 짧고 간단한 방법은? ->map을 쓰는 것
+        const mi=dbData.map(v=>new MovieInfo(v));
 
       // 생성된 객체 확인하기
       console.log("생성자함수 객체", mi);
@@ -144,6 +148,18 @@
       //////////////////// 로드구역 ///////////////////////
       window.addEventListener("DOMContentLoaded", () => {
         console.log("로딩완료");
+
+        // 한글자씩 span태그로 싸는 함수
+        const wrapSpan = (x) => {
+            let hcode='';
+            // for of로 한글자씩 순회
+            for (const txt of x) {
+                if(txt==' ')hcode+='&nbsp;&nbsp;';
+                else hcode+=`<span>${txt}</span>`;
+            }
+            // 코드리턴
+          return hcode;
+        };//////////////wrapSpan/////////////////
 
         // 객체로 세팅된 정보를 반복출력하자
         // 출력대상 : .wrap
@@ -173,9 +189,7 @@
                 <!-- 영화 한마디 -->
                 <h2 class="showtit">♥ 영화한마디!</h2>
                 <!-- 6. 문구 -->
-                <div class="show">${v.문구}
-                    <span>누</span><span>가</span>&nbsp;&nbsp;<span>죄</span><span>인</span><span>인</span><span>가</span>
-                </div>
+                <div class="show">${wrapSpan(v.문구)}</div>
             </section>
         `).join('');
         
