--- a/003.JS학습/01.JS실험실/07.드래그배너.html
+++ b/003.JS학습/01.JS실험실/07.드래그배너.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS실험실: 06.배너스타일</title>
+    <title>JS실험실: 07.드래그 배너</title>
     <link rel="stylesheet" href="./css/drag_banner.css">
     <script src="./js/drag_banner.js" type="module"></script>
 </head>
