--- a/001. HTML학습/05.Nav_PJ/nav06.html
+++ b/001. HTML학습/05.Nav_PJ/nav06.html
@@ -6,12 +6,10 @@
     <title>유형6. 가로네비 서브별 드롭다운 전체창</title>
     <!-- 메인CSS -->
     <link rel="stylesheet" href="./css/nav06.css" />
-    <!-- 메뉴data JS -->
-    <script src="./js/mdata.js"></script>
+
     <!-- 메인 JS -->
-    <script src="./js/nav06.js" defer></script>
-    <!-- 드래그배너 JS -->
-    <!-- <script src="./js/drag_banner.js" type="module"></script> -->
+    <script src="./js/nav06.js" type="module"></script>
+
   </head>
   <body>
     <!-- 1. 상단영역 -->
