--- a/001. HTML학습/05.Nav_PJ/nav06.html
+++ b/001. HTML학습/05.Nav_PJ/nav06.html
@@ -9,7 +9,6 @@
 
     <!-- 메인 JS -->
     <script src="./js/nav06.js" type="module"></script>
-
   </head>
   <body>
     <!-- 1. 상단영역 -->
@@ -34,7 +33,7 @@
       <!-- 배너영역 -->
       <section class="banbx">
         <!--슬라이드-->
-        <ul class="slide"></ul>
+        <ul class="slide ban-slide"></ul>
 
         <!--이동버튼-->
         <a href="#" class="controls abtn ab1">
@@ -43,7 +42,7 @@
         <a href="#" class="controls abtn ab2">
           <span class="ir">오른쪽버튼</span>
         </a>
-        
+
         <!--블릿버튼-->
         <ol class="controls indic"></ol>
       </section>
@@ -55,8 +54,22 @@
           <h2>신상품 보기</h2>
         </div>
         <!-- 오른쪽박스  -->
-        <div>
+        <div class="cont-right-box">
+          <section class="banbx sub-banbx">
+            <!--슬라이드-->
+            <ul class="slide sub-slide"></ul>
 
+            <!--이동버튼-->
+            <a href="#" class="controls abtn ab1">
+              <span class="ir">왼쪽버튼</span>
+            </a>
+            <a href="#" class="controls abtn ab2">
+              <span class="ir">오른쪽버튼</span>
+            </a>
+
+            <!--블릿버튼-->
+            <ol class="controls indic"></ol>
+          </section>
         </div>
       </section>
     </main>
