타임아웃 실행분석 : Javascript 처리원리

--- a/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
+++ b/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
@@ -11,6 +11,8 @@
   <body>
     <!-- 첫페이지:제목 -->
     <!-- 두번째페이지 : 설명 -->
-    
+    <!-- 세번째페이지 : 3D -->
+    <!-- 네번째페이지 : 위성 4가지 -->
+    <!-- 다번째페이지 :  목성에 관한 9가지-->
   </body>
 </html>
