--- a/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
+++ b/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
@@ -12,63 +12,138 @@
     <!-- 1. 상단영역 -->
     <!-- 2. 메인영역 -->
     <main>
-        <!-- 첫페이지:제목 -->
-        <section class="jupiter jupiter1">
-            <div class="jupiter1_text">
-                <h1>JUPITER</h1>
-                <p>
-                    Jupiter's signature stripes and swirls are actually cold, windy clouds of ammonia and water, floating in an atmosphere of hydrogen and helium. The dark orange stripes are called belts, while the lighter bands are called zones, and they flow east and west in opposite directions. Jupiter’s iconic Great Red Spot is a giant storm bigger than Earth that has raged for hundreds of years.
-                </p>
-            </div>
-        </section>
-        <!-- 두번째페이지 : 설명 -->
-        <section class="jupiter jupiter2">
+      <!-- 첫페이지:제목 -->
+      <section class="jupiter jupiter1">
+        <div class="jupiter1_text">
+          <h1>JUPITER</h1>
+          <p>
+            Jupiter's signature stripes and swirls are actually cold, windy
+            clouds of ammonia and water, floating in an atmosphere of hydrogen
+            and helium. The dark orange stripes are called belts, while the
+            lighter bands are called zones, and they flow east and west in
+            opposite directions. Jupiter’s iconic Great Red Spot is a giant
+            storm bigger than Earth that has raged for hundreds of years.
+          </p>
+        </div>
+      </section>
+      <!-- 두번째페이지 : 설명 -->
+      <section class="jupiter jupiter2">
+        <!-- 2-1.설명 첫번째 -->
+        <div class="desc desc1">
+          <div class="desc1_img">
+            <img src="" alt="" />
+          </div>
+          <div class="desc1_text">
+            <h3>
+              <strong>Potential for Life</strong>
+              <br /><br />
+              Jupiter’s environment is probably not conducive to life as we know
+              it. The temperatures, pressures, and materials that characterize
+              this planet are most likely too extreme and volatile for organisms
+              to adapt to.
+              <br /><br />
+              While planet Jupiter is an unlikely place for living things to
+              take hold, the same is not true of some of its many moons. Europa
+              is one of the likeliest places to find life elsewhere in our solar
+              system. There is evidence of a vast ocean just beneath its icy
+              crust, where life could possibly be supported.
+            </h3>
+          </div>
+        </div>
+        <!-- 2-2.설명 두번째 -->
+        <div class="desc desc2">
+          <div class="desc2_img">
+            <img src="" alt="" />
+          </div>
+          <div class="desc2_text">
+            <h3>
+              <strong>Size and Distance</strong>
+              <br /><br />
+              With a radius of 43,440.7 miles (69,911 kilometers), Jupiter is 11
+              times wider than Earth. If Earth were the size of a grape, Jupiter
+              would be about as big as a basketball.
+              <br /><br />
+              From an average distance of 484 million miles (778 million
+              kilometers), Jupiter is 5.2 astronomical units away from the Sun.
+              One astronomical unit (abbreviated as AU), is the distance from
+              the Sun to Earth. From this distance, it takes sunlight 43 minutes
+              to travel from the Sun to Jupiter.
+            </h3>
+          </div>
+        </div>
+      </section>
 
-            <!-- 2-1.설명 첫번째 -->
-            <div class="desc desc1">
-                <div class="desc1_img">
-                    <img src="" alt="">
-                </div>
-                <div class="desc1_text">
-                    <h3>
-                        <strong>Potential for Life</strong>
-                        <br><br>
-                        Jupiter’s environment is probably not conducive to life as we know it. The temperatures, pressures, and materials that characterize this planet are most likely too extreme and volatile for organisms to adapt to.
-                        <br><br>
-                        While planet Jupiter is an unlikely place for living things to take hold, the same is not true of some of its many moons. Europa is one of the likeliest places to find life elsewhere in our solar system. There is evidence of a vast ocean just beneath its icy crust, where life could possibly be supported.
-                    </h3>
-                </div>
-            </div>
-            <!-- 2-2.설명 두번째 -->
-            <div class="desc desc2">
-                <div class="desc2_img">
-                    <img src="" alt="">
-                </div>
-                <div class="desc2_text">
-                    <h3>
-                        <strong>Size and Distance</strong>
-                        <br><br>
-                        With a radius of 43,440.7 miles (69,911 kilometers), Jupiter is 11 times wider than Earth. If Earth were the size of a grape, Jupiter would be about as big as a basketball.
-                        <br><br>
-                        From an average distance of 484 million miles (778 million kilometers), Jupiter is 5.2 astronomical units away from the Sun. One astronomical unit (abbreviated as AU), is the distance from the Sun to Earth. From this distance, it takes sunlight 43 minutes to travel from the Sun to Jupiter.
-                    </h3>
-                </div>
-            </div>
+      <!-- 세번째페이지 : 3D -->
+      <section class="jupiter jupiter3">
+        <div class="jupiter3_text">
+          <h3>Surface</h3>
+          <p>
+            As a gas giant, Jupiter doesn’t have a true surface. The planet is
+            mostly swirling gases and liquids. While a spacecraft would have
+            nowhere to land on Jupiter, it wouldn’t be able to fly through
+            unscathed either. The extreme pressures and temperatures deep inside
+            the planet crush, melt, and vaporize spacecraft trying to fly into
+            the planet.
+          </p>
+        </div>
+        <iframe
+          class="imodel"
+          src="https://solarsystem.nasa.gov/gltf_embed/2375"
+          frameborder="0"
+          width="100%"
+          loading="eager"
+        ></iframe>
+      </section>
 
-        </section>
-
-        <!-- 세번째페이지 : 3D -->
-        <section class="jupiter jupiter3">
-            <div class="jupiter3_text">
-                <h3>Surface</h3>
-                <p>
-                    As a gas giant, Jupiter doesn’t have a true surface. The planet is mostly swirling gases and liquids. While a spacecraft would have nowhere to land on Jupiter, it wouldn’t be able to fly through unscathed either. The extreme pressures and temperatures deep inside the planet crush, melt, and vaporize spacecraft trying to fly into the planet.
-                </p>
-            </div>
-            <iframe class="imodel" src="https://solarsystem.nasa.gov/gltf_embed/2375" frameborder="0" width="100%" loading="eager"></iframe>
-        </section>
-        <!-- 네번째페이지 : 위성 4가지 -->
-        <!-- 다번째페이지 :  목성에 관한 9가지-->
+      <!-- 네번째페이지 : 위성 4가지 -->
+      <section class="jupiter jupiter4">
+        <!-- 4-1. 첫번째 위성 : Ganymede -->
+        <div class="moon1">
+          <div class="moon_img"><img src="" alt="" /></div>
+          <div class="moon1_text">
+            <h4>Ganymede</h4>
+            <p>
+              Ganymede is Jupiter's largest moon, and the largest moon in our
+              solar system. It's even bigger than Mercury, and Pluto.
+            </p>
+          </div>
+        </div>
+        <!-- 4-2. 두번째 위성 : Callisto -->
+        <div class="moon2">
+          <div class="moon_img"><img src="" alt="" /></div>
+          <div class="moon2_text">
+            <h4>Callisto</h4>
+            <p>
+              Callisto is Jupiter’s second largest moon and the third largest
+              moon in our solar system.
+            </p>
+          </div>
+        </div>
+        <!-- 4-3. 세번째 위성 : Io -->
+        <div class="moon3">
+          <div class="moon_img"><img src="" alt="" /></div>
+          <div class="moon3_text">
+            <h4>Io</h4>
+            <p>
+              Io is Jupiter's third largest moon, and the most volcanically
+              active world in our solar system.
+            </p>
+          </div>
+        </div>
+        <!-- 4-2. 네번째 위성 : Europa -->
+        <div class="moon4">
+          <div class="moon_img"><img src="" alt="" /></div>
+          <div class="moon4_text">
+            <h4>Europa</h4>
+            <p>
+              Europa is Jupiter's fourth largest moon. It's about 90% the size
+              of Earth’s Moon.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- 다번째페이지 :  목성에 관한 9가지-->
+      
     </main>
     <!-- 3. 하단영역 -->
   </body>
