--- a/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
+++ b/960.팀프로젝트/팀PJ_WBS/목성/jupiter.html
@@ -14,7 +14,7 @@
     <main>
       <!-- 첫페이지:제목 -->
       <section class="jupiter jupiter1">
-        <div class="jupiter1_text">
+        <div class="jupiter1-text">
           <h1>JUPITER</h1>
           <p>
             Jupiter's signature stripes and swirls are actually cold, windy
@@ -30,10 +30,10 @@
       <section class="jupiter jupiter2">
         <!-- 2-1.설명 첫번째 -->
         <div class="desc desc1">
-          <div class="desc1_img">
+          <div class="desc1-img">
             <img src="" alt="" />
           </div>
-          <div class="desc1_text">
+          <div class="desc1-text">
             <h3>
               <strong>Potential for Life</strong>
               <br /><br />
@@ -52,10 +52,10 @@
         </div>
         <!-- 2-2.설명 두번째 -->
         <div class="desc desc2">
-          <div class="desc2_img">
+          <div class="desc2-img">
             <img src="" alt="" />
           </div>
-          <div class="desc2_text">
+          <div class="desc2-text">
             <h3>
               <strong>Size and Distance</strong>
               <br /><br />
@@ -75,7 +75,7 @@
 
       <!-- 세번째페이지 : 3D -->
       <section class="jupiter jupiter3">
-        <div class="jupiter3_text">
+        <div class="jupiter3-text">
           <h3>Surface</h3>
           <p>
             As a gas giant, Jupiter doesn’t have a true surface. The planet is
@@ -99,8 +99,8 @@
       <section class="jupiter jupiter4">
         <!-- 4-1. 첫번째 위성 : Ganymede -->
         <div class="moon1">
-          <div class="moon_img"><img src="" alt="" /></div>
-          <div class="moon1_text">
+          <div class="moon-img"><img src="" alt="" /></div>
+          <div class="moon1-text">
             <h4>Ganymede</h4>
             <p>
               Ganymede is Jupiter's largest moon, and the largest moon in our
@@ -110,8 +110,8 @@
         </div>
         <!-- 4-2. 두번째 위성 : Callisto -->
         <div class="moon2">
-          <div class="moon_img"><img src="" alt="" /></div>
-          <div class="moon2_text">
+          <div class="moon-img"><img src="" alt="" /></div>
+          <div class="moon2-text">
             <h4>Callisto</h4>
             <p>
               Callisto is Jupiter’s second largest moon and the third largest
@@ -121,8 +121,8 @@
         </div>
         <!-- 4-3. 세번째 위성 : Io -->
         <div class="moon3">
-          <div class="moon_img"><img src="" alt="" /></div>
-          <div class="moon3_text">
+          <div class="moon-img"><img src="" alt="" /></div>
+          <div class="moon3-text">
             <h4>Io</h4>
             <p>
               Io is Jupiter's third largest moon, and the most volcanically
@@ -132,8 +132,8 @@
         </div>
         <!-- 4-2. 네번째 위성 : Europa -->
         <div class="moon4">
-          <div class="moon_img"><img src="" alt="" /></div>
-          <div class="moon4_text">
+          <div class="moon-img"><img src="" alt="" /></div>
+          <div class="moon4-text">
             <h4>Europa</h4>
             <p>
               Europa is Jupiter's fourth largest moon. It's about 90% the size
@@ -143,7 +143,75 @@
         </div>
       </section>
       <!-- 다번째페이지 :  목성에 관한 9가지-->
-      
+      <section  class="jupiter jupiter5">
+                    <header>
+                        <h2>10 Need-to-Know Things About Jupiter</h2>
+                    </header>
+                    <section class="p3grid">
+                        <div class="p3gridbx ptn">
+                            <div class="circle">1</div>
+                            <div class="p3girdcont">
+                                <h3>THE GRANDEST PLANET</h3>
+                                <p>Eleven Earths could fit across Jupiter’s equator. If Earth were the size of a grape, Jupiter would be the size of a basketball.</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx ptn">
+                            <div class="circle">2</div>
+                            <div class="p3girdcont">
+                                <h3>FIFTH PLANET FROM OUR STAR</h3>
+                                <p>Jupiter orbits about 484 million miles (778 million kilometers) or 5.2 Astronomical Units (AU) from our Sun (Earth is one AU from the Sun).</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx bdrx ptn">
+                            <div class="circle">3</div>
+                            <div class="p3girdcont">
+                                <h3>SHORT DAY/LONG YEAR</h3>
+                                <p>Jupiter rotates once about every 10 hours (a Jovian day), but takes about 12 Earth years to complete one orbit of the Sun (a Jovian year).</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx">
+                            <div class="circle">4</div>
+                            <div class="p3girdcont">
+                                <h3>WHAT'S INSIDE</h3>
+                                <p>Jupiter is a gas giant and so lacks an Earth-like surface. If it has a solid inner core at all, it’s likely only about the size of Earth.</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx bdrx">
+                            <div class="circle">5</div>
+                            <div class="p3girdcont">
+                                <h3>MASSIVE WORLD, LIGHT ELEMENTS</h3>
+                                <p>Jupiter's atmosphere is made up mostly of hydrogen (H2) and helium (He).</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx">
+                            <div class="circle">6</div>
+                            <div class="p3girdcont">
+                                <h3>WORLDS GALORE</h3>
+                                <p>Jupiter has more than 75 moons.</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx">
+                            <div class="circle">7</div>
+                            <div class="p3girdcont">
+                                <h3>RINGED WORLD</h3>
+                                <p>In 1979 the Voyager mission discovered Jupiter’s faint ring system. All four giant planets in our solar system have ring systems.</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx bdrx">
+                            <div class="circle">8</div>
+                            <div class="p3girdcont">
+                                <h3>EXPLORING JUPITER</h3>
+                                <p>Nine spacecraft have visited Jupiter. Seven flew by and two have orbited the gas giant. Juno, the most recent, arrived at Jupiter in 2016.</p>
+                            </div>
+                        </div>
+                        <div class="p3gridbx bdbx">
+                            <div class="circle">9</div>
+                            <div class="p3girdcont">
+                                <h3>INGREDIENTS FOR LIFE?</h3>
+                                <p>Jupiter cannot support life as we know it. But some of Jupiter's moons have oceans beneath their crusts that might support life.</p>
+                            </div>
+                        </div>
+      </section>
     </main>
     <!-- 3. 하단영역 -->
   </body>
