--- a/003.JS학습/01.JS실험실/08.재귀호출.html
+++ b/003.JS학습/01.JS실험실/08.재귀호출.html
@@ -19,7 +19,6 @@
         list-style: none;
         margin: 0;
         padding: 0;
-        
       }
       .gbox li {
         box-sizing: border-box;
@@ -34,10 +33,56 @@
         height: 100%;
         object-fit: cover;
       }
+      .progress {
+        display: flex;
+      }
+      .txt {
+        font-size: 40px;
+        color: hotpink;
+        padding: 0 10px;
+        line-height: 60px;
+      }
+      .pbar {
+        position: relative;
+        width: 500px;
+        height: 60px;
+        border: 2px solid gray;
+        text-align: center;
+        font-size: 30px;
+        line-height: 60px;
+        font-weight: bold;
+        color: #fff;
+        background-color: #ccc;
+        /* 글자 그림자로 1px 외곽선 만들기 */
+        text-shadow:
+        1px 0 #000,
+        -1px 0 #000,
+        0 1px #000,
+        0 -1px #000;
+      }
+      .pNum {
+        position: relative;
+        z-index: 1;
+      }
+      /* 증가표시 바 */
+      .bar {
+        position: absolute;
+        left: 0;
+        width: 50%;
+        height: 100%;
+        background-color: blue;
+      }
     </style>
   </head>
   <body>
     <h1>08.재귀호출 : 무한이동 갤러리</h1>
+    <div class="progress">
+      <span class="txt">준비</span>
+      <div class="pbar">
+        <span class="pNum">0</span>%
+        <span class="bar"></span>
+      </div>
+    </div>
     <div class="gbox"></div>
   </body>
 </html>
