--- a/003.JS학습/01.JS실험실/08.재귀호출.html
+++ b/003.JS학습/01.JS실험실/08.재귀호출.html
@@ -59,7 +59,7 @@
         -1px 0 #000,
         0 1px #000,
         0 -1px #000;
-        
+
       }
       .pNum {
         position: relative;
@@ -80,7 +80,7 @@
     <div class="progress">
       <span class="txt">준비</span>
       <div class="pbar">
-        <span class="pNum">0</span>%
+        <span class="pNum">0 %</span>
         <span class="bar"></span>
       </div>
     </div>
