--- a/004.React학습/01.react-cdn/04.컴포넌트.html
+++ b/004.React학습/01.react-cdn/04.컴포넌트.html
@@ -5,24 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>04.리액트 컴포넌트</title>
 
-    <!-- 1.리액트 기본 라이브러리 -->
+    <!-- 1. 리액트 기본 라이브러리 -->
     <script
-    src="https://unpkg.com/react@18/umd/react.production.min.js"
-    crossorigin
-></script>
-<!-- 2.리액트 가상돔 라이브러리 -->
-<script
-    src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-    crossorigin
-></script>
-<!-- 3.리액트 바벨 라이브러리 -->
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
+      crossorigin
+    ></script>
+    <!-- 2. 리액트 가상돔 라이브러리 -->
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+    <!-- 3. 리액트 바벨 라이브러리 -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-<!-- 4.리액트 컴포넌트 JSX 호출 -->
+    <!-- 4. 모듈화 JS 호출 -->
     <script
-      src="./js/04.컴포넌트.jsx"
+      src="./js/avengers.jsx"
+      data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+
+    <!-- 5. 리액트 컴포넌트 JSX 호출 -->
+    <script src="./js/04.컴포넌트.jsx" type="text/babel"></script>
   </head>
   <body>
     <!-- 리액트 출력요소들 -->
