--- a/004.React학습/01.react-cdn/04.컴포넌트.html
+++ b/004.React학습/01.react-cdn/04.컴포넌트.html
@@ -26,7 +26,8 @@
     ></script>
 
     <!-- 5. 리액트 컴포넌트 JSX 호출 -->
-    <script src="./js/04.컴포넌트.jsx" type="text/babel"></script>
+    <!-- 모듈 호출하는 JS에도 data-plugins 필요 -->
+    <script src="./js/04.컴포넌트.jsx" data-plugins="transform-es2015-modules-umd" type="text/babel"></script>
   </head>
   <body>
     <!-- 리액트 출력요소들 -->
