--- a/004.React학습/01.react-cdn/04.컴포넌트.html
+++ b/004.React학습/01.react-cdn/04.컴포넌트.html
@@ -24,6 +24,12 @@
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+    <!-- 4-1. mFn JS 호출 -->
+    <script
+      src="./js/my_function.js"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
 
     <!-- 5. 리액트 컴포넌트 JSX 호출 -->
     <!-- 모듈 호출하는 JS에도 data-plugins 필요 -->
