--- a/002.CSS학습/07.Sass/사스적용연습.html
+++ b/002.CSS학습/07.Sass/사스적용연습.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sass 기본 적용 연습하기</title>
-    <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <!-- CSS파일로 배포해야함! (SCSS 아님!) -->
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <div class="wrapper">
