--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="./css/main.css" />
     <!-- 미디어쿼리 CSS -->
     <link rel="stylesheet" href="./css/media.css" />
+
+    <!-- 제이쿼리 라이브러리 -->
+    <script src="./js/jquery-3.7.1.min.js"> </script>
+    <script src="./js/jquery-ui.min.js"> </script>
+
     <!-- 메인JS 불러오기 : 모듈로 불러오기 -->
     <script type="module" src="./js/main.js"></script>
     <!-- 
@@ -115,7 +120,7 @@
       <!-- 5. 현장포토영역 -->
       <div id="real-photo-area">
         <section class="real-photo-area inbox">
-          <h2 class="stit">현장포토</h2>
+          <h2 class="stit">현장 포토</h2>
           <div class="cont-box">
             <div class="col-12 live-box"></div>
           </div>
@@ -124,7 +129,7 @@
       <!-- 6. 대표이미지 영역 -->
       <div id="main-photo-area">
         <section class="main-photo-area inbox">
-          <h2 class="stit">대표이미지</h2>
+          <h2 class="stit">대표 이미지</h2>
           <div class="cont-box">
             <div class="col-12 poster-box"></div>
           </div>
