--- a/003.JS학습/JS8-2.DOM_메서드.html
+++ b/003.JS학습/JS8-2.DOM_메서드.html
@@ -240,6 +240,9 @@
                     7. 요소의 새로운 속성 넣기
                     -> 선택요소.setAttributeNode(새로운속성)
 
+                    (참고) 직접 속성값 세팅하기
+                    -> 선택요소.setAttribute(새로운속성,값)
+
                 **************************************************/
 
                 //////// 새리스트 요소 생성하기 ///////
@@ -274,11 +277,46 @@
 
 
 
+                  // [ 내부 태그넣기 방법 1 ]
                   // 메모리상에 생성된 li에 이미지 요소를 innerHTML에 넣기
                   // innerHtml로 넣기 > DOM에 직접넣기가 아닌 메모리상 태그 넣기도 가능한가?
-                  newEle.innerHTML=`
-                  <img src="images/ab${rdmNum}.jpg" alt="${avenName[rdmNum-1]}" title="${avenName[rdmNum-1]}">
-                  `;
+                  // >>>> 가능함
+                  // newEle.innerHTML=`
+                  // <img src="images/ab${rdmNum}.jpg" alt="${avenName[rdmNum-1]}" title="${avenName[rdmNum-1]}">
+                  // `;
+
+                  // [ 내부 태그넣기 방법 2 ] : 메모리상 이미지 생성
+                  let imgEle =document.createElement('img');
+                  // (( 이미지 속성 세팅하기 방법 1 ))
+                  // imgEle.src = `images/ab${rdmNum}.jpg`;
+                  // imgEle.alt = avenName[rdmNum-1];
+                  // imgEle.title = avenName[rdmNum-1];
+
+                  // (( 이미지 속성 세팅하기 방법 2 ))
+                  // imgEle.setAttribute("src", `images/ab${rdmNum}.jpg`);
+                  // imgEle.setAttribute("alt", avenName[rdmNum-1]);
+                  // imgEle.setAttribute("title", avenName[rdmNum-1]);
+                  
+                  // (( 이미지 속성 세팅하기 방법 3 )) ->> 메모리상 속성 세팅
+                  // (1) 속성객체 변수에 할당하기
+                  let isrc = document.createAttribute("src");
+                  let ialt = document.createAttribute("alt");
+                  let itit = document.createAttribute("title");
+
+                  // (2) 메모리상 속성에 값 세팅하기 : value로 세팅하기
+                  isrc.value =`images/ab${rdmNum}.jpg`;
+                  ialt.value =avenName[rdmNum-1];
+                  itit.value =avenName[rdmNum-1];
+
+                  // (3) 메모리상 생성된 이미지에 메모리상 세팅된 속성 매칭하기
+                  // setAttributeNode(속성객체)
+                  imgEle.setAttributeNode(isrc);
+                  imgEle.setAttributeNode(ialt);
+                  imgEle.setAttributeNode(itit);
+
+
+                  // (2) 메모리상 생성된 li에 메모리상 생성된 img 넣기
+                  newEle.appendChild(imgEle);
 
                   // 변경대상에 새로운 li 넣기
                   // appendChild(요소)
