--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -34,6 +34,12 @@
      <!-- 3.리액트 바벨 라이브러리 -->
      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
+    <!-- 상단영역 모듈 JS -->
+    <script
+      src="./js/components/TopArea.jsx"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
     <!-- 공통모듈 JS -->
     <script
       src="./js/main.js"
