--- a/003.JS학습/JS5-7.함수기본메서드.htm
+++ b/003.JS학습/JS5-7.함수기본메서드.htm
@@ -223,6 +223,7 @@
           화살표: function () {
             setTimeout(() => {
               exBox[10].innerText = this.성 + " " + this.명;
+              // 화살표함수는 bind(this)없이도 this키워드를 묶어서 큐로 보내준다. (내부설계가 되어있음)
             }, 3000);
           },
         };
@@ -246,6 +247,7 @@
         exBox[8].innerText=합격자들.이름다.bind(개인1)();
         // setTimeout으로 시간차 실행함수 호출하기
         합격자들.시간차.bind(개인2)();
+        합격자들.화살표.bind(개인3)();
 
       }); //////////////////load////////////////////////////
     </script>
