--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -20,6 +20,9 @@
     />
     <!-- 메인 CSS -->
     <link rel="stylesheet" href="./css/main.css" />
+        <!-- 메인 CSS -->
+        <link rel="stylesheet" href="./css/intems.css" />
+        
        <!-- 1.리액트 기본 라이브러리 -->
        <script
        src="https://unpkg.com/react@18/umd/react.production.min.js"
@@ -33,6 +36,12 @@
  
      <!-- 3.리액트 바벨 라이브러리 -->
      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <!-- 아이템 카테고리 데이터 JS -->
+    <script
+      src="./js/data/category.js"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
 
     <!-- 상단영역 모듈 JS -->
     <script
@@ -46,12 +55,19 @@
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+        <!-- 아이템영역 모듈 JS -->
+        <script
+        src="./js/components/ItemsArea.jsx"
+        data-plugins="transform-es2015-modules-umd"
+        type="text/babel"
+      ></script>
     <!-- 하단영역 모듈 JS -->
     <script
       src="./js/components/FooterArea.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+    
     <!-- 공통모듈 JS -->
     <script
       src="./js/main.js"
