--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -17,11 +17,18 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css"
-    />
+      />
+      <!-- {/* 스와이퍼용 css */} -->
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+        />
+        <!-- {/* 스와이퍼 JS */} -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- 메인 CSS -->
-    <link rel="stylesheet" href="./css/main.css" />
-        <!-- 메인 CSS -->
-        <link rel="stylesheet" href="./css/intems.css" />
+    <link id="main-css" rel="stylesheet" href="./css/main.css" />
+    <!-- <link rel="stylesheet" href="./css/intems.css" /> -->
+
         
        <!-- 1.리액트 기본 라이브러리 -->
        <script
@@ -43,6 +50,11 @@
       type="text/babel"
     ></script>
 
+    <script
+      src="./js/components/Gallery.jsx"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
     <!-- 상단영역 모듈 JS -->
     <script
       src="./js/components/TopArea.jsx"
