--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -29,6 +29,10 @@
     <link id="main-css" rel="stylesheet" href="./css/main.css" />
     <!-- <link rel="stylesheet" href="./css/intems.css" /> -->
 
+    <!-- 제이쿼리 라이브러리 -->
+    <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/jquery-ui.min.js"></script>
+
         
        <!-- 1.리액트 기본 라이브러리 -->
        <script
@@ -50,8 +54,15 @@
       type="text/babel"
     ></script>
 
+    <!-- 갤러리 모듈 JS -->
     <script
       src="./js/components/Gallery.jsx"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
+    <!-- 로그인 모듈 JS -->
+    <script
+      src="./js/components/Login.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
