--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -54,6 +54,13 @@
       type="text/babel"
     ></script>
 
+    <!-- 회원가입 모듈 JS -->
+    <script
+      src="./js/validation.js"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
+
     <!-- 갤러리 모듈 JS -->
     <script
       src="./js/components/Gallery.jsx"
