--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/public/index.html
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>dc pj</title>
+    <link
+      rel="shortcut icon"
+      href="./images/svg/dc-logo.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
-
   </body>
 </html>
