--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/03.구현코드/index.html
@@ -17,36 +17,38 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css"
-      />
-      <!-- {/* 스와이퍼용 css */} -->
-        <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-        />
-        <!-- {/* 스와이퍼 JS */} -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- 메인 CSS -->
+    />
+    <!-- 스와이퍼 CSS  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <!-- 메인 CSS : #main-css -->
     <link id="main-css" rel="stylesheet" href="./css/main.css" />
-    <!-- <link rel="stylesheet" href="./css/intems.css" /> -->
+
+    <!-- 스와이퍼 JS -->
+    <script 
+    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- 제이쿼리 라이브러리 -->
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/jquery-ui.min.js"></script>
 
-        
-       <!-- 1.리액트 기본 라이브러리 -->
-       <script
-       src="https://unpkg.com/react@18/umd/react.production.min.js"
-       crossorigin
-     ></script>
-     <!-- 2.리액트 가상돔 라이브러리 -->
-     <script
-       src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
-       crossorigin
-     ></script>
- 
-     <!-- 3.리액트 바벨 라이브러리 -->
-     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <!-- 1.리액트 기본 라이브러리 -->
+    <script
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
+      crossorigin
+    ></script>
+
+    <!-- 2.리액트 가상돔 라이브러리 -->
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+
+    <!-- 3.리액트 바벨 라이브러리 -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
     <!-- 아이템 카테고리 데이터 JS -->
     <script
       src="./js/data/category.js"
@@ -54,13 +56,14 @@
       type="text/babel"
     ></script>
 
-    <!-- 유효성검사 : 회원가입 모듈 JS -->
+    <!-- 유효성검사 JS : 회원가입용 -->
     <script
       src="./js/validation.js"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
-    <!-- 유효성검사 : 로그인 모듈 JS -->
+
+    <!-- 유효성검사 JS : 로그인용 -->
     <script
       src="./js/valid_login.js"
       data-plugins="transform-es2015-modules-umd"
@@ -73,36 +76,42 @@
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+
     <!-- 로그인 모듈 JS -->
     <script
       src="./js/components/Login.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+
     <!-- 회원가입 모듈 JS -->
     <script
       src="./js/components/Member.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+
     <!-- 상단영역 모듈 JS -->
     <script
       src="./js/components/TopArea.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+
     <!-- 메인영역 모듈 JS -->
     <script
       src="./js/components/MainArea.jsx"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
-        <!-- 아이템영역 모듈 JS -->
-        <script
-        src="./js/components/ItemsArea.jsx"
-        data-plugins="transform-es2015-modules-umd"
-        type="text/babel"
-      ></script>
+
+    <!-- 아이템영역 모듈 JS -->
+    <script
+      src="./js/components/ItemsArea.jsx"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
+
     <!-- 하단영역 모듈 JS -->
     <script
       src="./js/components/FooterArea.jsx"
@@ -110,19 +119,20 @@
       type="text/babel"
     ></script>
 
-        <!-- 부드러운 스크롤 JS -->
-        <script
-        src="./js/smoothScroll24.js"
-        data-plugins="transform-es2015-modules-umd"
-        type="text/babel"
-      ></script>
-    
+    <!-- 부드러운 스크롤 JS -->
+    <script
+      src="./js/smoothScroll24.js"
+      data-plugins="transform-es2015-modules-umd"
+      type="text/babel"
+    ></script>
+
     <!-- 공통모듈 JS -->
     <script
       src="./js/main.js"
       data-plugins="transform-es2015-modules-umd"
       type="text/babel"
     ></script>
+  </head>
   <body>
     <div id="root"></div>
   </body>
