--- a/007.VueJS학습/01.인트로/nanda.html
+++ b/007.VueJS학습/01.인트로/nanda.html
@@ -29,16 +29,24 @@
             <!-- 1-1.샵명 -->
             <h1 class="tit" v-text="bigTit"></h1>
             <!-- v-text 디렉티브 : 텍스트출력속성 -->
+
             <!-- 1-2.로고 -->
             <div class="logo" v-html="logo"></div>
             <!-- v-html 디렉티브 : 태그출력속성 -->
         </section>
 
         <!-- 2. 배너파트 -->
-        <section class="part"></section>
+        <section class="part">
+            <p class="banner" v-html="content"></p>
+            <!-- v-html 디렉티브 : 태그출력속성 -->
+        </section>
 
         <!-- 3. 상품리스트파트 -->
-        <section class="part"></section>
+        <section class="part gwrap">
+            <ol class="glist">
+                <li></li>
+            </ol>
+        </section>
     </div>
     <!-- 
         기본구성 : 3단구성
