싱크맞추기

--- a/007.VueJS학습/02.기초연습/01.컴포넌트연습1.html
+++ b/007.VueJS학습/02.기초연습/01.컴포넌트연습1.html
@@ -20,14 +20,18 @@
   <body>
     <!-- 1.타이틀 -->
     <h1 class="tit">
-      <!-- 타이틀 컴포넌트 -->
-      <tit-comp></tit-comp>
+        <!-- 타이틀 컴포넌트 -->
+        <tit-comp></tit-comp>
     </h1>
     <!-- 유튜브 동영상박스 -->
     <div class="you-box"></div>
 
     <!-- 2.그리드 레이아웃 박스 -->
-    <div class="grid"></div>
+    <div class="grid">
+      <!-- v-for 숫자돌리기
+      (숫자증가,순번) in 개수 -->
+      <list-comp v-for="(n,i) in 50"></list-comp>
+    </div>
     <!-- 3.하단정보 -->
     <div class="tit2">
       <!-- 하단정보 컴포넌트 -->
