싱크맞추기

--- a/007.VueJS학습/02.기초연습/04.뷰엑스스토아.html
+++ b/007.VueJS학습/02.기초연습/04.뷰엑스스토아.html
@@ -53,6 +53,7 @@
          <!-- 
           [라우터에서 연결한 컴포넌트(템플릿) 보일곳]
           router-view를 쓴 자리에 컴포넌트 소스코드가 뿌려짐!
+          얘가 outlet기능임
           -->
           <router-view></router-view>
       </p>
