--- a/007.VueJS학습/02.기초연습/02.컴포넌트연습2.html
+++ b/007.VueJS학습/02.기초연습/02.컴포넌트연습2.html
@@ -26,8 +26,10 @@
     <!-- 유튜브 동영상박스 -->
     <div class="you-box">
       <!-- 아이프레임 컴포넌트 -->
-      <ifr-comp v-bind:mv-code="'ZaQNTfKbngI'"></ifr-comp>
       <ifr-comp v-bind:mv-code="'ZH1Y1l1OmTY'"></ifr-comp>
+      <ifr-comp v-bind:mv-code="'ZaQNTfKbngI'"></ifr-comp>
+      <ifr-comp v-bind:mv-code="'Qz2QFUHbHQc'"></ifr-comp>
+      <ifr-comp v-bind:mv-code="'iV-tLF7U-n0'"></ifr-comp>
     </div>
 
     <!-- 2.그리드 레이아웃 박스 -->
@@ -40,12 +42,22 @@
       v-bind:data-item="'item No.'+n"
       v-bind:list-num="n"
       v-bind:my-seq="i"
-      v-bind:end-let="'de'"
+      v-bind:end-let="'DE'"
+      v-on:hull="goMsg"
+      v-on:oh-my-gotkimchi="overMsg"
       ></list-comp>
+        <!-- 
+          v-on:hull="goMsg"
+          내가 만든 이벤트명으로 부모 메서드 호출!
+          이것을 어디서 연결하나?
+          내 함수에서 this.$emit("hull",전달값)
+         -->
+
       <!-- 
-        v-bind:key 설정은 반복 컴포넌트일 경우 유일값으로 설정되는 필수 속성이다!
-        웹팩으로 설치된 개발환경에서는 에러가 발생함
-        주의) key값은 프롭스다운 하여 사용하지 않는다,
+        v-bind:key 설정은 반복 컴포넌트일 경우
+        유일값으로 설정되는 필수 속성이다!
+        웹팩으로 설치된 개발환경에서는 에러가 발생함!
+        주의) key값은 프롭스다운 하여 사용하지 않는다!
        -->
     <!-- 
       w3c 문법 규칙에 따라 내가만든 속성으로
